tests/errors/cpp/expand/call-zeroargs-missing-parentheses.h
#define EXPANDME1() 123

// Should not be expanded (missing "()" for that)
EXPANDME1
